--- a/app/src/main/res/layout/book_info_list.xml
+++ b/app/src/main/res/layout/book_info_list.xml
@@ -9,56 +9,69 @@
     app:cardCornerRadius="4dp">
 
     <LinearLayout
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="100dp">
 
-        <cn.a1949science.www.bookrecord.widget.CircleImageView
-            android:id="@+id/headicon"
-            android:layout_marginStart="10dp"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:civ_border_width="2dp" />
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp"
+            android:gravity="center_vertical"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <cn.a1949science.www.bookrecord.widget.CircleImageView
+                android:id="@+id/headicon"
+                android:layout_marginStart="10dp"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:civ_border_width="2dp" />
+
+            <TextView
+                android:id="@+id/book_info_usernick"
+                android:layout_width="0dp"
+                android:layout_height="20dp"
+                android:textSize="15sp"
+                android:layout_marginStart="10dp"
+                android:layout_weight="1"/>
+
+            <com.willy.ratingbar.ScaleRatingBar
+                android:id="@+id/book_info_rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="10dp"
+                app:srb_starWidth="20dp"
+                app:srb_starHeight="20dp"
+                app:srb_starPadding="0dp"
+                app:srb_numStars="5"
+                app:srb_stepSize="0.1"
+                app:srb_rating="0"
+                app:srb_isIndicator="false"
+                app:srb_clickable="true"
+                app:srb_scrollable="true"
+                app:srb_clearRatingEnabled="true"
+                app:srb_drawableEmpty="@mipmap/star_empty"
+                app:srb_drawableFilled="@mipmap/star_full">
+            </com.willy.ratingbar.ScaleRatingBar>
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/book_info_usernick"
-            android:layout_width="0dp"
-            android:layout_height="20dp"
-            android:textSize="15sp"
-            android:layout_marginStart="10dp"
-            android:layout_weight="1"/>
-
-        <com.willy.ratingbar.ScaleRatingBar
-            android:layout_gravity="center_horizontal"
-            android:id="@+id/book_info_rating"
-            android:layout_width="wrap_content"
+            android:id="@+id/book_info_usercomment"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="10dp"
-            app:srb_starWidth="20dp"
-            app:srb_starHeight="20dp"
-            app:srb_starPadding="0dp"
-            app:srb_numStars="5"
-            app:srb_stepSize="0.1"
-            app:srb_rating="0"
-            app:srb_isIndicator="false"
-            app:srb_clickable="true"
-            app:srb_scrollable="true"
-            app:srb_clearRatingEnabled="true"
-            app:srb_drawableEmpty="@mipmap/star_empty"
-            app:srb_drawableFilled="@mipmap/star_full">
-        </com.willy.ratingbar.ScaleRatingBar>
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"/>
+
+        <TextView
+            android:id="@+id/book_info_commentdate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginBottom="5dp"/>
+
     </LinearLayout>
-    <TextView
-        android:id="@+id/book_info_usercomment"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"/>
-    <TextView
-        android:id="@+id/book_info_commentdate"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"/>
+
 </android.support.v7.widget.CardView>
