--- a/app/src/main/res/layout/activity_reading.xml
+++ b/app/src/main/res/layout/activity_reading.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -23,7 +24,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="已读记录"
-                android:textSize="20dp"
+                android:textSize="20sp"
                 android:textColor="@android:color/black"/>
         </android.support.v7.widget.Toolbar>
     <ScrollView
@@ -53,7 +54,7 @@
                     android:gravity="center_horizontal"
                     android:text="评分"
                     android:textColor="@android:color/black"
-                    android:textSize="20dp" />
+                    android:textSize="20sp" />
 
                 <com.willy.ratingbar.ScaleRatingBar
                     android:id="@+id/bookRating"
@@ -75,7 +76,7 @@
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:focusable="true"
                     android:focusableInTouchMode="true"
@@ -85,23 +86,28 @@
                         android:layout_width="80dp"
                         android:layout_height="match_parent"
                         android:gravity="right|center_vertical"
-                        android:text="笔记："
+                        android:text="@string/NoteText"
                         android:textColor="@android:color/background_dark"
-                        android:textSize="16dp" />
+                        android:textSize="16sp"
+                        tools:ignore="RtlHardcoded" />
 
-                    <com.sendtion.xrichtext.RichTextEditor
-                        android:id="@+id/reading_note"
+                    <EditText
+                        android:id="@+id/reading_note_text"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="10dp"
-                        android:background="@drawable/bg_border"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:hint="请输入内容"
+                        android:background="@null"
+                        android:textSize="16sp"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="16dp" />
+                        android:inputType="textMultiLine"
+                        tools:ignore="LabelFor" />
+
                 </LinearLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="80dp"
+                    android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:orientation="horizontal">
 
@@ -109,18 +115,22 @@
                         android:layout_width="80dp"
                         android:layout_height="match_parent"
                         android:gravity="right|center_vertical"
-                        android:text="原因："
+                        android:text="@string/reason"
                         android:textColor="@android:color/background_dark"
-                        android:textSize="16dp" />
+                        android:textSize="16sp"
+                        tools:ignore="RtlHardcoded" />
 
-                    <com.sendtion.xrichtext.RichTextEditor
+                    <EditText
                         android:id="@+id/reading_reason"
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:layout_marginEnd="10dp"
-                        android:background="@drawable/bg_border"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="10dp"
+                        android:hint="请输入内容"
+                        android:background="@null"
+                        android:textSize="16sp"
                         android:textColor="@android:color/darker_gray"
-                        android:textSize="16dp" />
+                        android:inputType="textMultiLine"
+                        tools:ignore="LabelFor" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -135,13 +145,13 @@
                         android:gravity="right|center_vertical"
                         android:text="方式："
                         android:textColor="@android:color/background_dark"
-                        android:textSize="16dp" />
+                        android:textSize="16sp"
+                        tools:ignore="RtlHardcoded" />
 
                     <Spinner
                         android:id="@+id/reading_way"
-                        android:layout_width="200dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_marginLeft="50dp"
                         android:entries="@array/readway" />
                 </LinearLayout>
 
@@ -157,20 +167,23 @@
                         android:gravity="right|center_vertical"
                         android:text="位置："
                         android:textColor="@android:color/background_dark"
-                        android:textSize="16dp" />
+                        android:textSize="16sp"
+                        tools:ignore="RtlHardcoded" />
 
                     <TextView
                         android:id="@+id/reading_adress_textview"
                         android:layout_width="200dp"
                         android:layout_height="match_parent"
-                        android:gravity="center_vertical|center_horizontal"
+                        android:layout_margin="10dp"
+                        android:singleLine="false"
+                        android:gravity="center_vertical"
                         android:hint="选择读书地点" />
 
                     <Button
                         android:id="@+id/reading_adress_button"
                         android:layout_width="40dp"
                         android:layout_height="40dp"
-                        android:layout_marginLeft="10dp"
+                        android:layout_marginStart="10dp"
                         android:background="@mipmap/adress" />
                 </LinearLayout>
 
@@ -186,13 +199,15 @@
                         android:gravity="right|center_vertical"
                         android:text="分类："
                         android:textColor="@android:color/background_dark"
-                        android:textSize="16dp" />
+                        android:textSize="16sp"
+                        tools:ignore="RtlHardcoded" />
 
                     <TextView
                         android:id="@+id/reading_classfy"
-                        android:layout_width="200dp"
+                        android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:gravity="center"
+                        android:layout_margin="10dp"
+                        android:gravity="center_vertical"
                         android:hint="点击选择图书分类" />
                 </LinearLayout>
 
