--- a/app/src/main/res/layout/activity_want_read.xml
+++ b/app/src/main/res/layout/activity_want_read.xml
@@ -85,7 +85,7 @@
                     <TextView
                         android:layout_width="80dp"
                         android:layout_height="match_parent"
-                        android:text="原因："
+                        android:text="@string/reason"
                         android:textSize="16sp"
                         android:textColor="@android:color/background_dark"
                         android:gravity="right|center_vertical"
